--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
     "qrcode": "^1.5.4",
     "resend": "^6.4.2",
     "speakeasy": "^2.0.0",
-    "xlsx": "^0.18.5"
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
